# ROS-intro

./: README.md
agitr/: CMakeLists.txt  hello.cpp  log.cpp  package.xml  param_test.cpp  pose.cpp  pubvel.cpp  service_sample.cpp
example_1/: README.md
example_1/Alp/: CMakeLists.txt
example_1/Alp/msg/: answer.msg
example_1/Alp/src/: node1.cpp  offb_node.cpp
example_1/Batuhan/meturone_egitim/devel/: setup.sh
example_1/Batuhan/meturone_egitim/devel/lib/meturone_egitim/: dummy_node  sum_first_second_max
example_1/Batuhan/workspace/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh
example_1/Batuhan/workspace/devel/include/meturone_egitim/: Dummy.h  answer.h
example_1/Batuhan/workspace/src/meturone_egitim/: CMakeLists.txt  dummy_launch.launch
example_1/Batuhan/workspace/src/meturone_egitim/msg/: answer.msg
example_1/Batuhan/workspace/src/meturone_egitim/src/: dummy_node.cpp  summax2.cpp
example_1/Burak/dummy/: CMakeLists.txt  dummy.cpp  package.xml
example_1/Burak/dummy/msg/: answ.msg
example_1/Sait/agitr/: CMakeLists.txt  example.launch  hw1.cpp  package.xml
example_1/Sait/costum_msgs/: CMakeLists.txt  package.xml
example_1/Sait/costum_msgs/msg/: hw1.msg  hw1answer.msg
example_1/meturone_egitim/src/meturone_egitim/: CMakeLists.txt
example_1/yusuf/: CMakeLists.txt  package.xml
example_1/yusuf/msg/: answer.msg
example_1/yusuf/src/: dummy_node.cpp  sum_arrays.cpp
example_1/yusuf/src/meturone_egitim/msg/: Dummy.msg
example_1/yusuf/src/meturone_egitim/src/util/: generate_random_array.hpp
example_2/: README.md
example_2/Burak/example_client/: CMakeLists.txt  cl.cpp  package.xml
example_2/Burak/example_server/: CMakeLists.txt  package.xml  sr.cpp
example_2/Burak/example_server/srv/: ex.srv
example_2/meturone_egitim/: CMakeLists.txt  dummy_launch.launch
example_2/meturone_egitim/src/: dummy_node.cpp
example_2/meturone_egitim/srv/: RandomArray.srv
(+18 files in other folders)
